--- a/nyc-rtr01.cfg
+++ b/nyc-rtr01.cfg
@@ -209,4 +209,11 @@ line vty 5 30
 !
 !
 !
+
+interface loopback0
+ip address 10.1.1.1 255.255.255.255 
+
+!
+router ospf 100
+network 10.1.100.0 0.0.0.255 area 0
 !
