--- a/nyc-rtr01.cfg
+++ b/nyc-rtr01.cfg
@@ -214,6 +214,11 @@ interface loopback0
 ip address 10.1.1.1 255.255.255.255 
 
 !
+
+interface loopback1
+ip address 10.2.2.2 255.255.255.255
+!
 router ospf 100
 network 10.1.1.0 0.0.0.255 area 0
+network 10.2.2.0 0.0.0.255 area 0
 !
