--- a/nyc-rtr01.cfg
+++ b/nyc-rtr01.cfg
@@ -217,6 +217,7 @@ ip address 10.1.1.1 255.255.255.255
 
 interface loopback1
 ip address 10.2.2.2 255.255.255.255
+description ospf router id
 !
 router ospf 100
 network 10.1.1.0 0.0.0.255 area 0
