--- a/nyc-rtr01.cfg
+++ b/nyc-rtr01.cfg
@@ -212,9 +212,8 @@ line vty 5 30
 
 interface loopback0
 ip address 10.1.1.1 255.255.255.255 
-
+description klajghfdibadicbial
 !
-
 interface loopback1
 ip address 10.2.2.2 255.255.255.255
 description ospf router id
