adding lp101 and ospf 100

--- a/nyc-rtr02.cfg
+++ b/nyc-rtr02.cfg
@@ -213,5 +213,12 @@ line vty 5 30
 !
 !
 !
+interface loopback 101
+ip address 20.1.1.1 255.255.255.255
+!
+router ospf 100
+network 20.1.1.0 0.0.0.255 area 0
+!
+!
 !
 !
